NMdoc/force-app/main/default/objects/Event__c/fields/Total_Vendor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Vendor_Cost__c</fullName>
    <label>Total Vendor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>